# GtsAlpha-Caption-Pro

./: .gitignore  GtsAlpha_Caption_Pro.spec  README.md  TASK.md  build_installer.bat  build_installer.sh  index.html  package.json  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: GtsAlpha_Caption_Pro_Thai_Final.py  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/gtsalpha/: __init__.py  __main__.py
src/gtsalpha/core/: caption.py  downloader.py  summarizer.py  translator.py  tts.py
src/gtsalpha/gui/: app.py  theme.py  widgets.py
src/gtsalpha/utils/: config.py  url_parser.py
tests/: test_caption.py  test_downloader.py  test_summarizer.py  test_translator.py  test_url_parser.py
